--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="nav-link  active" aria-current="page" href="/Project1/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Project1/about.html">About</a>
+                        <a class="nav-link" href="/Project1/About.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
