--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                     <form>
                         <div class="col-md-4">
                             <label for="validationCustom01" class="form-label">First name</label>
-                            <input type="text" class="form-control" id="validationCustom01" value="Enter first name"
+                            <input type="text" class="form-control" id="validationCustom01" value=""
                                 required>
                         </div>
 
                         <div class="col-md-4 my-3">
                             <label for="validationCustom01" class="form-label">Last name</label>
-                            <input type="text" class="form-control" id="validationCustom01" value="Enter last name"
+                            <input type="text" class="form-control" id="validationCustom01" value=""
                                 required>
                         </div>
                         <div class="mb-3 my-3">
