--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
                     <form>
                         <div class="col-md-4">
                             <label for="validationCustom01" class="form-label">First name</label>
-                            <input type="text" class="form-control" id="validationCustom01" value=""
+                            <input type="text" class="form-control" id="validationCustom01" value="" placeholder="Enter first name"
                                 required>
                         </div>
 
                         <div class="col-md-4 my-3">
                             <label for="validationCustom01" class="form-label">Last name</label>
-                            <input type="text" class="form-control" id="validationCustom01" value=""
+                            <input type="text" class="form-control" id="validationCustom01" value="" placeholder="Enter last name"
                                 required>
                         </div>
                         <div class="mb-3 my-3">
                             <label for="exampleInputEmail1" class="form-label">Email address</label>
                             <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
+                                aria-describedby="emailHelp" placeholder="example@gmail.com">
                             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                         </div>
 
